--- a/src/components/HomeRoute/index.css
+++ b/src/components/HomeRoute/index.css
@@ -1,4 +1,10 @@
 .unorderList-container {
+  background-color: white;
+  box-shadow: 0 0 10px 5px rgba(186, 181, 181, 0.5);
+  margin-left: 50px;
+  margin-right: 50px;
+  height: 50%;
+  margin-bottom: 50px;
 }
 .img {
   height: 100px;
@@ -16,9 +22,38 @@
   flex-wrap: wrap;
   flex-direction: column;
 }
+.nav-link {
+  text-decoration: none;
+}
+
+.list-inner-items {
+  text-align: center;
+  background-color: white;
+  border-radius: 5px;
+  width: 100%;
+  color: black;
+}
+
 .home-container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+}
+.findbook-button {
+  font-size: 14px;
+  font-weight: 400;
+  font-family: 'Roboto';
+  color: #ffffff;
+  border: none;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  border-radius: 6px;
+  background-color: #0967d2;
+  margin-top: 20px;
+  cursor: pointer;
+  outline: none;
+}
+.success-render {
+  text-align: center;
 }
