--- a/src/components/LoginRoute/index.css
+++ b/src/components/LoginRoute/index.css
@@ -1,58 +1,139 @@
-.login-container {
+.login-form-container {
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: 50%;
-  background-color: white;
-  background-size: cover;
+  height: 100vh;
+  width: 90%;
+  max-width: 1110px;
+  margin: auto;
+}
+
+@media screen and (min-width: 992px) {
+  .login-form-container {
+    flex-direction: row;
+    justify-content: space-around;
+  }
+}
+
+.login-website-logo-mobile-img {
+  width: 165px;
+  margin-top: 50px;
+  margin-bottom: 35px;
+}
+
+@media screen and (min-width: 992px) {
+  .login-website-logo-mobile-img {
+    display: none;
+  }
+}
+
+.login-img {
+  width: 278px;
+}
+
+@media screen and (min-width: 992px) {
+  .login-img {
+    width: 60%;
+    max-width: 524px;
+    flex-shrink: 1;
+    margin-right: 20px;
+  }
+}
+
+.login-website-logo-desktop-img {
+  width: 185px;
+  
+}
+
+@media screen and (max-width: 991px) {
+  .login-website-logo-desktop-img {
+    display: none;
+  }
 }
 
 .form-container {
-  background-color: #ccd1d6;
-  padding: 10px;
-  margin: 10px;
-  height: 250px;
-  width: 200px;
-  border-radius: 20px;
   display: flex;
-  justify-content: center;
   flex-direction: column;
-  margin-right: 50px;
   align-items: center;
+  padding: 20px;
+  border-radius: 8px;
+  width: 100%;
+  max-width: 350px;
 }
 
-.userinput {
-  border-width: 0px;
-  height: 20px;
+@media screen and (min-width: 992px) {
+  .form-container {
+    width: 350px;
+    flex-shrink: 0;
+    box-shadow: 0px 8px 40px rgba(7, 7, 7, 0.08);
+    padding: 64px 48px 64px 48px;
+  }
 }
 
-.logo-container {
+.input-container {
   display: flex;
-  align-items: center;
-  justify-content: center;
+  flex-direction: column;
+  margin-top: 20px;
+  width: 100%;
 }
 
-.loginImage {
-  width: 40%;
+.input-label {
+  margin-bottom: 0px;
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 16px;
+  color: #475569;
+}
 
-  height: 100%;
-  padding: 10px;
+.username-input-field {
+  font-size: 14px;
+  height: 40px;
+  border: 1px solid #d7dfe9;
+  background-color: #e2e8f0;
+  color: #64748b;
+  border-radius: 2px;
+  margin-top: 5px;
+  padding: 8px 16px 8px 16px;
+  outline: none;
 }
-.logoimg {
-  width: 40px;
-  height: 50px;
+
+.password-input-field {
+  font-size: 14px;
+  height: 40px;
+  border: 1px solid #d7dfe9;
+  background-color: #e2e8f0;
+  color: #64748b;
+  border-radius: 2px;
+  margin-top: 5px;
+  padding: 8px 16px 8px 16px;
+  outline: none;
 }
-.bookhublogo {
-  height: 30px;
-  font-size: 20px;
-  margin-left: 10px;
-}
-.loginbutton {
-  background-color: rgb(80, 80, 230);
-  color: white;
-  border-radius: 10px;
-  padding: 10px;
-  margin: 10px;
-  border-width: 0px;
+
+.login-button {
+  font-family: 'Roboto';
+  font-weight: bold;
+  font-size: 14px;
+  color: #ffffff;
+  height: 40px;
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 2px;
+  background-color: #0b69ff;
+  border-radius: 8px;
+  border: none;
   cursor: pointer;
+  outline: none;
+}
+
+.error-message {
+  align-self: start;
+  font-size: 12px;
+  margin-top: 3px;
+  margin-bottom: 0px;
+  font-family: 'Roboto';
+  font-size: 12px;
+  line-height: 16px;
+  color: #ff0b37;
 }
